--- a/src/styles/weui/widget/weui-grid/weui-grid.less
+++ b/src/styles/weui/widget/weui-grid/weui-grid.less
@@ -16,7 +16,7 @@
     position: relative;
     float: left;
     padding: 20px 10px;
-    width: 100% / @weuiGridColumnCount;
+    width: ~"calc(100% / @{weuiGridColumnCount})";
     box-sizing: border-box;
 
     &:before {
