--- a/src/styles/weui/widget/weui_cell/weui_cell_global.less
+++ b/src/styles/weui/widget/weui_cell/weui_cell_global.less
@@ -65,7 +65,7 @@
     color: @weuiTextColorGray;
 }
 .vux-cell-justify {
-  height: unit(@weuiCellLineHeight, em);
+  height: ~'@{weuiCellLineHeight}em';
   &&:after {
     content: ".";
     display: inline-block;
