fix: 修复less语法问题

--- a/src/styles/weui/widget/weui_cell/weui_form/weui_form_common.less
+++ b/src/styles/weui/widget/weui_cell/weui_form/weui_form_common.less
@@ -13,7 +13,7 @@
     background-color: transparent;
     font-size: inherit;
     color: inherit;
-    height: unit(@weuiCellLineHeight, em);
+    height: ~'@{weuiCellLineHeight}em';
     height: ~'@{weuiCellLineHeight}em';
 
     // hides the spin-button
