--- a/src/styles/weui/widget/weui_cell/weui_form/weui_form_common.less
+++ b/src/styles/weui/widget/weui_cell/weui_form/weui_form_common.less
@@ -14,7 +14,7 @@
     font-size: inherit;
     color: inherit;
     height: ~'@{weuiCellLineHeight}em';
-    height: ~'@{weuiCellLineHeight}em';
+    line-height: @weuiCellLineHeight;
 
     // hides the spin-button
     &::-webkit-outer-spin-button, &::-webkit-inner-spin-button{
